--- a/package.json
+++ b/package.json
@@ -23,13 +23,26 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "^2.0.6",
+    "@nestjs/microservices": "^10.4.11",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
+    "class-validators": "^1.0.1",
+    "dotenv": "^16.4.5",
+    "joi": "^17.13.3",
+    "multer": "^1.4.5-lts.1",
+    "nats": "^2.28.2",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
