fix db connection bug

--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,11 @@
 
 
-PORT=3000
+PORT=3005
 
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=auth-ms
-DB_PASSWORD=12345
+DB_NAME=auth_ms
+DB_PASSWORD=1234
 DB_USER=postgres
 
 JWT_SECRET=
